[package]
name = "satsnet_slices"
version = "0.9.4"
edition = "2021"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
description = "Parse Bitcoin objects without allocations"
repository = "https://github.com/sat20-labs/rust_satsnet_slices"
documentation = "https://github.com/sat20-labs/rust_satsnet_slices"
keywords = ["bitcoin", "blocks", "transaction", "parse", "slices"]
categories = ["no-std", "cryptography::cryptocurrencies", "encoding"]
readme = "README.md"
license = "MIT"

[dependencies]
bitcoin_hashes = { version = "0.14", optional = true }
sha2 = { version = "0.10", optional = true }
# bitcoin = { package = "satsnet", path = "/Users/chenwenjie/test/rust/rust-satsnet/satsnet", version = "0.32.13", optional = true }
bitcoin = { package = "satsnet", version = "=0.32.14", optional = true }
redb = { version = "1.0", optional = true }
hashbrown = { version = "0.14", optional = true }
prometheus = { version = "0.13.4", optional = true }
alloc = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
# log = "0.4"

[features]
default = ["bitcoin_with_satsnet"]
bitcoin_hashes = ["dep:bitcoin_hashes"]
sha2 = ["dep:sha2"]
redb = ["dep:redb"]
bitcoin = ["dep:bitcoin", "bitcoin_hashes"]
bitcoin_with_satsnet = ["alloc", "bitcoin", "bitcoin/satsnet"]
slice_cache = ["dep:hashbrown"]
prometheus = ["dep:prometheus", "slice_cache"]

[dev-dependencies]
hex_lit = { version = "0.1", features = ["rust_v_1_46"] }
# bitcoin = { package = "satsnet", path = "/Users/chenwenjie/test/rust/rust-satsnet/satsnet", version = "0.32.13", features = ["rand"] }
bitcoin = { package = "satsnet", version = "=0.32.14", features = ["rand"]  }
bitcoin-test-data = "0.2.0"
tempfile = "3.4.0"
criterion = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benches"
harness = false
required-features = ["bitcoin_hashes", "bitcoin", "sha2"]
